fix(youtube): low contrast for the progress bar on thumbails (#825)

--- a/styles/youtube/catppuccin.user.css
+++ b/styles/youtube/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name YouTube Catppuccin
 @namespace github.com/catppuccin/userstyles/styles/youtube
 @homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/youtube
-@version 4.0.8
+@version 4.0.9
 @updateURL https://github.com/catppuccin/userstyles/raw/main/styles/youtube/catppuccin.user.css
 @supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Ayoutube
 @description Soothing pastel theme for YouTube
@@ -702,6 +702,9 @@
     .ytp-sb-subscribe {
       background-color: @accent-color;
       color: @crust;
+    }
+    ytd-thumbnail-overlay-resume-playback-renderer {
+      background-color: @surface1;
     }
 
     /* Panels, popups, tooltips */
